multihost-ingress-deployment/deployment-svc-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite-service
  namespace: zz-test
spec:
  selector:
    app: mywebsite
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebsite
  namespace: zz-test
spec:
  selector:
    matchLabels:
      app: mywebsite
  replicas: 2
  template:
    metadata:
      labels:
        app: mywebsite
    spec:
      containers:
      - name: mywebsite
        image: linuxgeekup/html-website:vtag1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "50s"
    nginx.org/client-max-body-size: "150m"
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"

  name: mywebsite-ingress
  namespace: zz-test
spec:
  rules:
    - host: app1.seliselocal.com
      http:
        paths:
          - backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    
    - host: app2.seliselocal.com
      http:
        paths:
          - backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    
    - host: app3.seliselocal.com
      http:
        paths:
          - backend:
              service:
                name: mywebsite-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
